fix: close search input when click outside & design the custom scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,18 @@
     --color-blackish: #21201e;
     --color-purplish: #6100c2;
 }
+
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-track {
+    background: #21201e;
+}
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
